# zephyr-fuel-cell-control-unit

./: .clang-format  .gitmodules  CMakeLists.txt  app.overlay  esp32s3-builtin.cfg  prj.conf
.run/: OpenOCD build and flash.run.xml
app/: prj.conf
app/lib-can-definitions/: can_ids.h
app/src/: fccu_v2.c  fccu_v2.h  main.c
boards/hydrogreen/fccu_v2/: board.cmake  fccu_v2-pinctrl.dtsi  fccu_v2_procpu.dts
peripherals/: adc.c  adc.h  can.c  can.h  can_dfu.c  can_dfu.h  counter.c  counter.h  gpio.c  gpio.h  pwm.c  pwm.h  rs485.c  rs485.h  status_led.c  status_led.h  uart.c  uart.h
src/: ads1015.c  ads1015.h  fccu.c  fccu.h  fccu_analog.c  fccu_analog.h  fccu_can_rx.c  fccu_can_rx.h  fccu_digital.c  fccu_digital.h  fccu_fan.c  fccu_fan.h  fccu_flow.c  fccu_flow.h  fccu_log.c  fccu_log.h  fccu_settings.c  fccu_settings.h  fccu_shell.c  fccu_shell.h  fccu_v2.c  fccu_v2.h  main.c
